stile.css
html,body {height: 100%;}
body {background: #d7d6d6; font-family: helvetica;}
a {text-decoration: none;}

/*GENERAL*/
.animate {
  -webkit-transition: all 0.3s ease-out;
          transition: all 0.3s ease-out;
            align-items: center;}
.button {display: inline-block; background: #fff; color: #000; padding: 15px 30px; border-radius: 3px; text-decoration: none;}
p {line-height: 22px;}
a {color: #16dd94;}
a:hover {color: #1af3a4;}
.middle_page_divider{
    margin: 40px 0 10px 0;
    height: 70%;
    text-align: center;
    background-image: url(resources/PhotoSlider/PhotoSlider-1.jpg);
    background-position: center center;
    position: relative;
    opacity: 0.8;
    background-size: cover;
    -o-background-size: cover;
    -moz-background-size: cover;
}

.middle_page_divider_content{
     top: 50%;
     transform: translateY(-50%);
     position: relative;
    z-index: 1900;
}

#slider_label{
    font-size: xx-large;
}

/*HEADER*/
.logo {height:100%; width:100%;}
.header {background: rgba(255, 255, 255, 0.5); height: 120px;}
.header__logo {float: left; display: block; padding: 3px 20px; width:250px; margin-top: -8px; border: solid 1px red;}
/*DARIO*/
.header__logo__dario {color: #fff; float: left; display: block; padding-top: 5px;width:8%;}
.logo__dario{height:70px; width:120px; margin-left: 30px; margin-top: -11px;}
.header__dario{height:58px;background-color: #000186; position: fixed;top: 0px;width: 100%; width:100%; z-index: 2000;}
.header__menu__dario{float: right; margin: 0; padding: 0; color: #fff;}
.header__menu__item__dario {display: inline-block; text-align: center; height: 58px; margin: auto; float: right;}
.header__menu__item__dario a {color: white; display: block; padding: 0 10px; font-weight: 800;top: 50%; transform: translateY(-50%); position: relative;}
.header__menu__item__dario a:hover {color: #000186;}
.header__menu__item__dario:hover {background: #ffffff;}
.header__darioHide{height: 0px;}

/* FINE DARIO*/
.header__menu__container {border: solid 1px lime; width: 80%; height: 100px; float: right;}
.header__menu {float: right; margin: 0; width: 65%; height: 100%; padding: 30px;}
.header__menu__item {display: inline-block; text-align: center; height: 58px; margin: auto; float: right;}
.header__menu__item a {color: #000186; display: block; padding: 0 10px; font-weight: 800;top: 50%; transform: translateY(-50%); position: relative;}
.header__menu__item a:hover {color: white;}
.header__menu__item:hover {background: rgba(0, 1, 134, 0.55);}
.header__icon-bar {display: block; float: right; padding: 15px; display: none;}
.header__icon-bar span {display: block; height: 3px; width: 30px; background: #000186; margin-bottom: 5px;}

/*COVER*/
.cover {
    height: 100%;
    background-size: cover;
    -o-background-size: cover;
    -moz-background-size: cover;
    background-position: center center;
    position: relative;
    margin-top: -120px;
    opacity: 0.8;
    z-index: -2;
    transition: background-image 0.5s ease;
}
.cover__filter {background: #000; width: 100%; height: 100%; position: absolute; z-index: -2; opacity: 0.3;}
.cover__caption {display: table; height: 100%; width: 100%; position: relative; z-index: -1; padding: 0 20px;}
.cover__caption__copy {display: table-cell; vertical-align: middle; text-align: center; color: #fff;}
#dots-container {margin-top:50px;}

.dot{
    cursor: pointer;
    height: 13px;
    width: 13px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.5s ease;
    position: relative;
    margin-left: 5px;
    margin-right: 5px;
}

.selected{background-color: black;}

.cover--single {height: 50%}
.cover--single h1 {font-size: 42px;}

/*CARDS*/
.cards {max-width: 1200px; margin: 40px auto;}
.card {width: 30%; margin: 0 1.5%;background: #fff; float: left;}
.card__image {width: 100%; height: auto;}
.card__copy {padding: 5px 20px;}
.card__copy h3 {margin-bottom: 0;}

/*BANNER*/
.banner {background: #fff; height: 50%; margin-top: 40px;}
.banner__image {width: 30%; float: left; height: 100%;
  background-size: cover;
  -o-background-size: cover;
  -moz-background-size: cover;
  background-position: center center;
}
.banner__copy {width: 70%; float: left; height: 100%; display: table;}
.banner__copy__text {display: table-cell; vertical-align: middle; padding: 30px;}
.banner__copy__text h3 {font-size: 36px; margin-bottom: 0;}
.banner__copy__text h4 {font-size: 22px; margin: 5px 0;}

.banner__autorizzazioni {border: 1px solid lime; background: #fff; height: auto; margin-top: 40px; padding: 10px; text-align: center;}
.banner__image__autorizzazioni {border: 1px solid red; width: 180px; height: 180px; margin: 10px; display: inline-block;}

/*FOOTER*/
.footer {background: #333; color: #fff; margin-top: 40px;}
.copyright_container{height:100px; background: black;}
.copyright{
    display:block;
    text-align: center;
    padding: 10px;
    line-height: 150%;
    top: 50%;
    transform: translateY(-50%);
    position: relative;
}
#googleMap{
    background-size: cover;
    -o-background-size: cover;
    -moz-background-size: cover;
    background-position: center center;
    height: 300px;
    width: 300px;
    background-image: url(resources/mappaPezzotta.PNG);
}.location_container{
     display: inline-flex;
 }

/*SINGLE*/
.single {}
.single__copy {max-width: 800px; margin: 0px auto; margin-top: -60px; background: #fff; padding: 20px 40px; position: relative; z-index: 1;}
.single__copy__meta {font-weight: bold; font-size: 18px;}
.single__copy__title {font-size: 32px;}

/*TABLET*/
@media (max-width: 998px) {
.banner__image,
.banner__copy {width: 50%; height: 50%;}
}

/*SMARTPHONE*/
/*@media (max-width: 767px)*/
@media (max-width: 850px) {
    #header_container {height: 1px;}
 .header__dario {display: none;}
.header {position: fixed; width: 100%;background:grey;}
.header__icon-bar {display: block;}
.header__menu__item {display: block; vertical-align: middle; text-align: left; width: 100%;}
.header__menu { background:grey; width: 100%; height: 0px;overflow: hidden;  padding: 0;}
.is-open {height: 360px; overflow: hidden;  padding: 30px 30px;}
/*cover*/
.cover { height: 100%;}
/*cards*/
.card {width: 90%; margin: 5%;}
/*banner*/
.banner {height: 100%;}
.banner__image,
.banner__copy {width: 100%; height: 50%;}
}

.clearfix:after {
  visibility: hidden;
  display: block;
  font-size: 0;
  content: " ";
  clear: both;
  height: 0;
}
* html .clearfix             { zoom: 1; } /* IE6 */
*:first-child+html .clearfix { zoom: 1; } /* IE7 */

/*BOX SIZING - per non modificare la larghezza degli elementi col padding*/
*,
*:before,
*:after {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

